# guard

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md  Rocket.toml  makefile  release.json  temp-example-config  temp-example-config.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
client/endpoint-cli/: Cargo.toml  README.md
client/endpoint-cli/src/: authentication.rs  main.rs  structs.rs  test.rs
client/endpoint-cli/src/file/: chunk.rs
client/endpoint-cli/src/global/: credential.rs
client/endpoint-cli/src/webserver/: server.rs
client/endpoint-cli/src/webserver/endpoint/: oauth.rs
config-creator/: next.config.ts  package-lock.json  package.json
docs/: development.md
example/: demo-screenshot.toml  email-config.toml  guard-dev-config.toml  oauth-config.toml
example/rust/middleware-auth/: Cargo.toml
example/rust/middleware-auth/src/: main.rs
frontend/: next.config.js  package-lock.json  package.json
server/: .gitignore  Cargo.toml  Dockerfile  TODO.md  diesel.toml
server/frontend/: deno.json  next.config.js  package-lock.json  package.json
server/frontend/app/: layout.js
server/frontend/guard-npm/: package.json
server/frontend/guard-npm/src/: general.js  index.js  metadata.js  routing.js
server/frontend/guard-npm/src/protocols/: oauth.js
server/frontend/src/: global.js
server/frontend/src/app/: page.js
server/frontend/src/components/: base.js  global.css
server/frontend/src/components/css/: base.css
server/frontend/src/components/image/background/: image_background.js
server/frontend/src/components/image/background/css/: image_background.css
server/frontend/src/components/input/: input_with_header.js
server/frontend/src/components/login/forms/: form_style1.js  form_style_special1.js
server/frontend/src/components/login/forms/css/: form_style1.css
server/frontend/src/components/login/forms/special_styles/: authenticating_desktop_application.js  check_your_email.js
server/frontend/src/components/login/forms/special_styles/css/: authenticating_desktop_application.css
server/frontend/src/components/login/pages/: login2_special.js  logout1.js
server/frontend/src/components/login/pages/css/: login2_special.css  magiclink1.css
server/frontend/src/components/miscellaneous/: frame_aesthetic_metadata_panel.js
server/frontend/src/components/miscellaneous/css/: aesthetic_metadata_panel.css
server/frontend/src/components/user/: profile_pic.js
server/frontend/src/inactive-pages/: temporarily-unavailable.js
server/frontend/src/pages/: access-denied.js  captcha.js  login.js  magiclink.js
server/frontend/src/pages/css/: access-denied.css
server/frontend/src/pages/oauth/: authorise.js
server/frontend/src/pages/oauth/css/: authorise.css
server/nginx/scripts/: forwarding.lua
server/src/: auth_method_handling.rs  auth_method_request.rs  authentication_misc.rs  database.rs  device.rs  diesel_mysql.rs  global.rs  hostname.rs  main.rs  policy.rs  request_proxy.rs  responses.rs  structs.rs  tables.rs  users.rs
server/src/cli/: cli_structs.rs  index.rs
server/src/cli/internal/validation/: argument.rs
server/src/cli/mode/: authenticate.rs  user.rs
server/src/endpoints/: auth.rs  metadata.rs  reverse_proxy_authentication.rs
server/src/misc/: tls.rs
server/src/protocols/email/: magiclink.rs
server/src/protocols/misc_pipeline/: device.rs
server/src/protocols/oauth/: client.rs  pipeline.rs  server.rs
server/src/protocols/oauth/endpoint/: client.rs  server.rs
server/src/protocols/oauth/server/: bearer_token.rs
server/src/proxied_authentication/: README.md  files.rs  general.rs
src/: auth_method_handling.rs  auth_method_request.rs  authentication_misc.rs  database.rs  device.rs  diesel_mysql.rs  files.rs  global.rs  hostname.rs  main.rs  policy.rs  responses.rs  structs.rs  tables.rs  users.rs
(+72 files in other folders)
