[package]
name = "guard-server"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
diesel = { version = "2.2.3", features = ["mysql", "r2d2"] }
rand = "0.8.5"
serde = "1.0.196"
hades_auth = { version = "0.1.3" }
url = "2.5.0"
hex-literal = "0.4.1"
toml = "0.8.12"
serde_urlencoded = "0.7.1"
regex = "1.10.4"
once_cell = "1.19.0"
serde_json = "1.0.116"
lettre = "0.11.6"
reqwest = "0.12.4"