[package]
name = "guard-server"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
diesel = { version = "2.2.3", features = ["mysql", "r2d2"] }
mysqlclient-sys = { version = "0.5" }
once_cell = "1.19.0"
serde = "1.0.196"
serde_json = "1.0.117"
regex = "1.10.4"
hades-auth = { git = "https://gitlab.com/oracularhades/hades-auth.git", branch = "main", subdir = "rust" }
url = "2.5.0"
hex-literal = "0.4.1"
toml = "0.8.12"
serde_urlencoded = "0.7.1"
lettre = "0.11.7"
reqwest = "0.12.4"
argon2 = "0.5.3"
base64 = "0.22.1"
indexmap = { version = "2.9.0", features = ["serde"] }
log = "0.4.27"
tokio = "1.44.2"
env_logger = "0.11.8"
uuid = { version = "1.16.0", features = ["v4"] }
rand = "0.8.5"
axum = { version = "0.8.8", features = ["ws"] }
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
axum-extra = { version = "0.12.5", features = ["cookie", "typed-header"] }
tower-http = { version = "0.6", features = ["fs"] }
futures-util = "0.3"
hyper-util = { version = "0.1", features = ["client-legacy"] }