[package]
name = "guard-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.12", features = ["json", "multipart"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.117"
serde_urlencoded = "0.7.1"
tokio = { version = "1.43.0", features = ["full"] }
url = "2.5.4"
yaml-rust = "0.4.5"
rocket = { version = "0.5.1", features = ["json"] }
once_cell = "1.19.0"
tokio-tungstenite = { version = "0.23.1", features = ["native-tls"] }
security-framework = "3.2.0"
