[package]
name = "middleware-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = "1.44.2"
rocket = { version = "0.5.1", features = ["json", "tls"] }
serde = "1.0.196"
serde_json = "1.0.117"
guard_auth = { git = "https://gitlab.com/lighthouse-search/guard.git", branch = "main", subdir = "client/library/rust" }